# rust-web-development-with-warp-tokio-and-reqwest

./: .gitignore  README.md  TODO.md  makefile
db/: README.md  makefile
server/: .env  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  log4rs.yaml  questions.json  setup.toml
server/handle-errors/: Cargo.toml
server/handle-errors/src/: lib.rs
server/integration-tests/: .env
server/integration-tests/src/: main.rs
server/migrations/: 20230528112234_questions_table.up.sql  20230528113955_answers_table.up.sql
server/mock-server/: Cargo.toml
server/mock-server/src/: lib.rs
server/src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
server/src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
server/src/types/: account.rs  answer.rs  pagination.rs  question.rs
