[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.7", features = ["derive"] }
config = { version = "0.13.1", features = ["toml"] }
dotenv = "0.15.0"
paseto = "2.0"
# Required to avoid errors with clap.
proc-macro2 = "1.0.37"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.2", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
